Build Directory Updated...

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./dist  # Adjust this to your build output directory
+          path: build  # Adjust this to your build output directory
 
   deploy:
     environment:
