--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Risfat's Portfolio",
-  "name": "Risfat's Portfolio",
+  "short_name": "Md Risfat Amin | Software Engineer (Flutter)",
+  "name": "Md Risfat Amin | Software Engineer (Flutter)",
   "icons": [
     {
       "src": "/favicon.ico",
